fix : external-secret namespace defualt로 수정

--- a/infrastructure/configs/external-secret-db.yaml
+++ b/infrastructure/configs/external-secret-db.yaml
@@ -2,7 +2,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: petclinic-db-common
-  namespace: external-secrets
+  namespace: default
 spec:
   refreshInterval: 1m
   secretStoreRef:
@@ -32,7 +32,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: petclinic-microservice-creds
-  namespace: external-secrets
+  namespace: default
 spec:
   refreshInterval: 1m
   secretStoreRef:
