--- a/apps/customers-service/templates/deployment.yaml
+++ b/apps/customers-service/templates/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: petclinic-customers
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicaCount | default 1 }}
   selector:
     matchLabels:
       app: petclinic-customers
@@ -18,32 +18,26 @@ spec:
         prometheus.io/path: "/actuator/prometheus"
         prometheus.io/port: "8080"
     spec:
+      imagePullSecrets:
+        - name: ecr-registry-secret
       containers:
         - name: customers-service
-          image: <path:petclinic/inputs#AWS_ACCOUNT_ID>.dkr.ecr.ap-northeast-2.amazonaws.com/petclinic-customers:v5.0.0
-          imagePullPolicy: Always
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy | default "Always" }}
           ports:
             - containerPort: 8080
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: mysql
-            - name: DB_HOST
-              valueFrom:
-                secretKeyRef:
-                  name: db-common
-                  key: DB_HOST
             - name: SPRING_DATASOURCE_URL
-              value: jdbc:mysql://$(DB_HOST)/customers_db
+              value: {{ .Values.database.url | quote }}
             - name: SPRING_DATASOURCE_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: db-microservice-creds
-                  key: CUSTOMERS_DATASOURCE_USERNAME
+              value: {{ .Values.database.username | quote }}
             - name: SPRING_DATASOURCE_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: db-microservice-creds
-                  key: CUSTOMERS_DATASOURCE_PASSWORD
+                  name: {{ .Values.database.passwordSecret }}
+                  key: {{ .Values.database.passwordKey }}
           readinessProbe:
             httpGet:
               path: /actuator/health
@@ -83,4 +77,3 @@ spec:
       protocol: TCP
       port: 8080
       targetPort: 8080
-
