--- a/infrastructure/ingress/templates/ingress.yaml
+++ b/infrastructure/ingress/templates/ingress.yaml
@@ -5,27 +5,22 @@ metadata:
   namespace: default
   annotations:
     # ALB 설정
-    #  외부 접근: 사용자가 인터넷에서 접속 가능한 외부 로드밸런서 역할
     alb.ingress.kubernetes.io/scheme: internet-facing
-    # ALB → Pod IP 직접 연결 (Worker Node 우회)
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/load-balancer-name: petclinic-alb
     
     # Health Check
-    alb.ingress.kubernetes.io/healthcheck-path: /health
+    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
     alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
     alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
     alb.ingress.kubernetes.io/healthy-threshold-count: '2'
     alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
     
-    # Subnet (Public Subnet에 ALB 생성)
-    # ArgoCD Vault Plugin을 통해 값 주입
-    alb.ingress.kubernetes.io/subnets: <path:petclinic/inputs#PUBLIC_SUBNETS>
+    # Subnet (실제 서브넷 ID)
+    alb.ingress.kubernetes.io/subnets: subnet-0916d6fc18f31085f,subnet-06b9e8bf7c6a6777b
+    
     # 리스너 포트
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
-    
-    # Path Rewrite 제거: nginx에서 직접 /petclinic 경로를 처리하도록 함
-    # alb.ingress.kubernetes.io/rewrite-target: /
     
     # 태그
     alb.ingress.kubernetes.io/tags: Environment=dev,Project=petclinic-msa
@@ -34,12 +29,19 @@ spec:
   rules:
   - http:
       paths:
-      # /petclinic으로 시작하는 모든 경로를 Frontend로 라우팅
-      # rewrite-target: / 로 인해 /petclinic/webjars/... → /webjars/...로 변환됨
-      - path: /petclinic
+      # Frontend - 루트 경로
+      - path: /
         pathType: Prefix
         backend:
           service:
             name: petclinic-frontend
             port:
               number: 80
+      # API Gateway - /api 경로
+      - path: /api
+        pathType: Prefix
+        backend:
+          service:
+            name: petclinic-api-gateway
+            port:
+              number: 8080
